[package]
name = "tinyproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
env_logger = "0.9.0"
futures = "0.3"
url = "2.2"
[dependencies.async-std]
version = "1.12"
features = ["attributes"]
