[package]
name = "tinyproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

url = "2.2"
anyhow = "1.0"
base64 = "0.12.1"
tokio = { version = "1", features = ["full"]}

log = "0.4"
fast_log = {version = "1.5" , features = ["lz4","zip","gzip"]}

[profile.release]
#opt-level = 'z'  # Optimize for size
opt-level = 3  # Optimize for size
lto = true
codegen-units = 1
#panic = 'abort'
panic = 'unwind'
